# omnibus

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .python-version  CONTRIBUTING.md  LICENSE  Makefile  README.md  dashboard.sh  egCheckboxes.py  egMultiSelect2.py  egMultiselect.py  launcher-pyqt-test.py  launcher.py  launcher_checkBox.py  launcher_comboCheck.py  launcher_old.py  logtool.py  ni.py  omnibus.sh  open_four_powershell_windows.bat  plot.py  poc.py  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  savefile.not_json_hehe  savefile_debug.not_json_hehe  setup.bat  setup.cfg  setup.py  setup.sh  source.sh  tempCodeRunnerFile.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  short-report.md
.github/workflows/: docker-publish.yml  enforce-team-approvals.yml  increment-major-version.yml  increment_version.py  omnibus-version-check.yml  test.yml
deploy/: CONOPS.md  README.md  docker-compose.yml
file-sharing-server/: README.md  server-http.py  server.py
fydp-logs/: backup_savefile.not_json
fydp-logs/Unknown/: all_messages_2024_03_28-03_25_55_PM.txt
omnibus/: __init__.py  __main__.py  omnibus.py  omnibus_test.py  pretty_startup.py  release_info.py  server.py  tick_counter_test.py  util.py
omnibus/util/: __init__.py  build_info.py  tick_counter.py  tick_counter_test.py
prototype/: README.md  fakeni.py  matplotlib.py  ni.py  plot.py  plot_plotly.py  plot_pyqtgraph.py  requirements.txt  server.py  spi.py
sinks/: plot.py
sinks/calibration/: graphic_interface.py  main.py  requirements.txt
sinks/dashboard/: can_display.py  can_message_table.py  can_selector.py  dashboard.py  dashboard2.py  dashboard_payload.py  dashboarditem.py  demoImg.py  dockwidget_example.py  main.py  main_payload.py  ops_valve_definitions.py  parsers.py  parsers_test.py  plotdashitem.py  publisher.py  register.py  req.txt  requirements.txt  savefile.json  savefile.sav  series.py  series_test.py  streams_test.py  utils.py
sinks/dashboard/can_message_table/: can_message_table.py
sinks/dashboard/can_msg_display/: can_display.py  can_display_testing.py  main.py  requirements.txt
sinks/dashboard/items/: actuator_can_sender.py  actuator_dynamic_text.py  can_message_table.py  can_selector.py  can_sender.py  command_selector.py  dashboard_item.py  dynamic_text.py  empty_plot.py  gauge_item.py  general_boards.py  image_item.py  (+29 more)
sinks/globallog/: 2022_11_19-10_41_10_AM.csv  2022_11_19-10_49_52_AM.csv  2022_12_04-01_21_28_PM.csv  2022_12_04-04_46_01_PM.csv  2022_12_04-06_50_38_PM.csv  logger.py  main.py  tick_counter.py
sinks/gpsd/: gps.py  main.py  processor.py  stpats.py
sinks/interamap/: .gitignore  Borealis LC 2024 GPS.kmz  README.md  config.py  interamap.py  main.py  requirements.txt  schema.kml  tileserver.py
sinks/logs/: logger.py
sinks/plot/: config.py  dashboard.py  dashboarditem.py  dock_widget.py  main.py  parser.py  parsers.py  parsers_test.py  plot.py  plotdashitem.py  requirements.txt  savefile.sav  series.py  series_test.py  temp.py  tick_counter.py
sinks/printer/: main.py
sinks/txtconsole/: main.py  txtconsole.py
sinks/web_dashboard/: .gitignore  index.html  package-lock.json  package.json
sources/fake_parsley/: README.txt  main.py
sources/fakeload/: main.py
sources/fakeni/: main.py
sources/ni/: calibration.py  calibration_test.py  config.py  config.py.example  main.py  requirements.txt
sources/parsley/: main.py  message_types.py  parsley.py  parsley_test.py
sources/payload_fake/: main.py
sources/pipe_output/: main.py  sender.py  test.py
sources/replay_log/: main.py  replay_log.py  replay_log_test.py  replay_log_test_sink.py  test_replay_log.py
sources/rfd900x/: README.md  main.py
sources/rlcs/: commander.py  config.py  config_rlcs.py  main.py  message_types.py  rlcs.py  rlcs_test.py
sources/rlcsv3/: commander.py  rlcs.py
src/bridge/: Dockerfile  __init__.py  __main__.py  docker_entrypoint.sh  main.py  pyproject.toml  relay.py  relay_test.py  server.py  translator.py  zmq_client.py
src/bridge/bridge_tests/: test_relay.py
src/bridge/tests/: __init__.py  test_relay.py  test_server.py  test_translator.py  test_zmq_client.py
src/dashboard/: dashboard.py  parsers.py  parsers_test.py  pyproject.toml  requirements.txt  utils.py
src/globallog/: Dockerfile  docker_entrypoint.sh  main.py  pyproject.toml
src/omnibus/: Dockerfile  __init__.py  healthcheck.py  message_types.py  omnibus.py  omnibus_test.py  server.py
src/sinks/interamap/: config.py  pyproject.toml  schema.kml  tileserver.py
src/sinks/interamap/resources/styles/: lightmode.qss
src/sinks/interamap/src/: http_server.py  main_window.py  map_view.py  real_time_parser.py
src/sources/parsley/: Dockerfile  dockerfile  main.py  pyproject.toml
src/websocket-server/: pyproject.toml  server.py  server2.py
src/websocket-server/templates/: index.html
src/websocket-server/tests/: test_server.py  test_server2.py
src/websocket_server/: Dockerfile  docker_entrypoint.sh  main.py  prod.py  pyproject.toml  server.py  server_test.py  test_server.py  wsgi.py
src/websocket_server/templates/: index.html
tools/: darwin-free-port.sh  format.sh  kill-omnibus.bat  omnibus.bat  towerside-start-logging.bat  towerside-stop-logging.bat
tools/data_processing/: README.md  can_field_definitions.py  can_processing.py  daq_processing.py  data_saving.py  dump_whole_log.py  exporting.py  field_peeking.py  helpers.py  interactions.py  interractions.py  log_merger.py  main.py  msgpack_sorter_unpacker.py  old_main.py  parse_ni_dat_log.py  parse_ni_extrapolate_compression.py  pyproject.toml  rlcs_processing.py  test_can_field_definitions.py
tools/data_processing_v2/: main.py
tools/data_processing_v2_beta/: main.py
tools/fydp_startup_utils/: start_dashboard.bat  start_omnibus.bat  start_parsley.bat  startup.bat
tools/manavs_sandbox/: Packet.py  main.py
tools/ni_csv/: main.py
tools/ni_source_log_processing/: .gitignore  TESTS.py  data_saving.py  parse_ni_dat_log.py  parse_ni_extrapolate_compression.py
(+95 files in other folders)
