# pyproject.toml
[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "omnibus"

[project]
name = "omnibus"
version = "1.1.0"
description = "A unified data bus"
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',

    'Operating System :: OS Independent',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows :: Windows 10',

    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',

    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering',
]

authors = [
    {name = "Waterloo Rocketry", email = "contact@waterloorocketry.com"}
]

requires-python = "~=3.11.0"

dependencies = [
    "autopep8",
    "msgpack",
    "msgpack-types",
    "pytest",
    "pyzmq",
    "flake8",
    "matplotlib",
    "dash",
    "gitpython",
    "parsley",
]

[project.scripts]
omnibus-server = "omnibus.server:server"

[tool.uv.sources]
parsley = { git = "https://github.com/waterloo-rocketry/parsley.git" }

[tool.uv.workspace]
members = [
    "src/sources/fakeni",
    "src/sources/ni",
    "src/sources/parsley",
    "src/sources/rlcsv3",
    "src/dashboard",
    "src/globallog",
    "src/sinks/interamap",
]

[tool.pyright]
include = ["omnibus/**"] # Eventually this should include the entire project
exclude = ["**/__pycache__", "**/node_modules", "**/__init__.py"]
# strict = ["omnibus/**"] # Eventually omnibus library should do strict type checking