# pyproject.toml
[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "omnibus"

[project]
name = "omnibus"
version = "1.1.0"
description = "A unified data bus"
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',

    'Operating System :: OS Independent',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows :: Windows 10',

    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',

    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering',
]

authors = [
    {name = "Waterloo Rocketry", email = "contact@waterloorocketry.com"}
]

requires-python = "~=3.11.0"

dependencies = [
    "msgpack>=1.1.0",
    "msgpack-types>=0.5.0",
    "pyzmq>=27.1.0",
    "matplotlib>=3.10.0",
    "gitpython >= 3.1.0",
    "parsley>=2025.4",
    "flask-socketio>=5.4",
    "eventlet>=0.40.3",
    "python-socketio[client]>=5.11",
    "python-engineio>=4.8",
]

[dependency-groups]
dev = [
    "autopep8",
    "flake8",
    "pytest",
]

[project.scripts]
omnibus-server = "omnibus.server:server"

[tool.uv.sources]
parsley = { git = "https://github.com/waterloo-rocketry/parsley.git" }

[tool.uv.workspace]
members = [
    "src/sources/fakeni",
    "src/sources/ni",
    "src/sources/parsley",
    "src/sources/rlcsv3",
    "src/dashboard",
    "src/globallog",
    "src/sinks/interamap",
    "packages/omnibus-ws-server",
]

[tool.pyright]
include = ["src/omnibus/**"] # Eventually this should include the entire project
exclude = ["**/__pycache__", "**/node_modules", "**/__init__.py"]
# strict = ["omnibus/**"] # Eventually omnibus library should do strict type checking
extraPaths = ["src/**"]

executionEnvironments = [
    {root = "src/dashboard"},
    {root = "src/sources/ni"},
    {root = "src/sources/parsley"},
    {root = "src/sources/rlcsv3"},
    {root = "src/globallog"},
    {root = "src/sources/fakeni"},
    {root = "src/sinks/interamap"}
]
