[project]
name = "omnibus-bridge"
version = "0.1.0"
description = "WebSocket bridge for Omnibus messaging system"
readme = "README.md"
license = "MIT"
requires-python = "~=3.11.0"

authors = [
    {name = "Waterloo Rocketry", email = "contact@waterloorocketry.com"}
]

dependencies = [
    "msgpack>=1.1.0",
    "pyzmq>=27.1.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.10.0",
    "eventlet>=0.35.0",
    "omnibus",
]

[tool.uv.sources]
omnibus = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
