[project]
name = "omnibus-ws-server"
version = "0.1.0"
description = "WebSocket server for Omnibus messaging system"
readme = "README.md"
license = "MIT"
requires-python = "~=3.11.0"

authors = [
    {name = "Waterloo Rocketry", email = "contact@waterloorocketry.com"}
]

dependencies = [
    "msgpack>=1.1.0",
    "pyzmq>=27.1.0",
    "flask-socketio>=5.3",
    "flask>=3.0",
    "omnibus",
    "gunicorn>=20.1.0",
    "simple-websocket>=1.0.0",
]

[project.scripts]
omnibus-ws-server = "websocket_server.main:main"
omnibus-ws-server-prod = "websocket_server.prod:main"

[tool.uv.sources]
omnibus = { workspace = true }